UPDATE: Content and locales json

--- a/public/locales/en/index.json
+++ b/public/locales/en/index.json
@@ -1,3 +1,10 @@
 {
-  "welcome": "Welcome to our application!"
+  "Kuan-Cheng Tsai": "Kuan-Cheng Tsai",
+  "Frontend Engineer": "Frontend Engineer",
+  "Build fast. Think clean.": "Build fast. Think clean.",
+  "I'm a frontend engineer specializing in cross-platform app development using React Native and Next.js.": "I'm a frontend engineer specializing in cross-platform app development using React Native and Next.js.",
+  "Experience": "Experience",
+  "Projects": "Projects",
+  "Contact": "Contact",
+  "About": "About"
 }
