--- a/public/locales/zh/index.json
+++ b/public/locales/zh/index.json
@@ -1,3 +1,10 @@
 {
-  "welcome": "歡迎使用我們的應用程式！"
+  "Kuan-Cheng Tsai": "蔡寬程",
+  "Frontend Engineer": "前端工程師",
+  "Build fast. Think clean.": "快速開發，清晰思考。",
+  "I'm a frontend engineer specializing in cross-platform app development using React Native and Next.js.": "我是一名專注於 React Native 和 Next.js 跨平台開發的前端工程師。",
+  "Experience": "經歷",
+  "Projects": "作品集",
+  "Contact": "聯絡方式",
+  "About": "關於"
 }
