UPDATE: introduce Hero, Experience, Skills, and ProjectCard components with localization and styling updates.

--- a/public/locales/en/index.json
+++ b/public/locales/en/index.json
@@ -4,5 +4,7 @@
   "I have worked with companies such as": "I have worked with companies such as",
   "Work": "Work",
   "Personal Projects": "Personal Projects",
-  "Optimization loading speed": "Optimization loading speed"
+  "Optimization loading speed": "Optimization loading speed",
+  "Experience": "Experience",
+  "Skills": "Skills"
 }
