--- a/public/locales/zh/index.json
+++ b/public/locales/zh/index.json
@@ -4,5 +4,7 @@
   "I have worked with companies such as": "我過去合作過的公司包括",
   "Work": "工作",
   "Personal Projects": "個人專案",
-  "Optimization loading speed": "優化加載速度"
+  "Optimization loading speed": "優化加載速度",
+  "Experience": "經歷",
+  "Skills": "技能"
 }
