UPDATE: Update music player project media assets and description.

--- a/public/locales/zh/index.json
+++ b/public/locales/zh/index.json
@@ -7,5 +7,6 @@
   "Optimization loading speed": "優化加載速度",
   "Experience": "經歷",
   "Skills": "技能",
-  "This is a music player app that allows users to listen to music.": "這是一個音樂播放器應用程式，允許使用者收聽音樂。"
+  "This is a music player app that allows users to listen to music.": "這是一個音樂播放器應用程式，允許使用者收聽音樂。",
+  "This is a music player application that allows users to listen to music and store music lists locally, ensuring that music can be played without an internet connection. It also provides a filtering function, allowing users to filter music by artist, music category, music name, etc.\n\nDevelopment was motivated by the fact that most music players on the market do not have a filtering function, and unstable networks can cause music to be interrupted.\n\nThe project uses Expo for development, SQLite as a local database, Node.js as the backend, and Express.js to backup the database and music files.\n\nIn the future, it is expected to use Google Drive or other cloud storage services for backup to provide a better user experience.": "這是一個音樂播放器應用程式，允許使用者收聽音樂，並在本地儲存音樂列表，確保沒有網路連線時也能播放音樂。並提供過濾功能，可以按照歌手、音樂類別、音樂名稱等進行過濾。\n\n開發主因是想要解決市面上多數音樂播放器沒有過濾功能，以及網路不穩定導致音樂中斷等問題。\n\n該專案採用 Expo 進行開發，並透過 SQLite 作為本地資料庫，後端使用 Node.js，使用 Express.js 進行開發，負責備份資料庫和音樂檔案。\n\n預計未來會用 Google Drive 或其他雲端儲存服務進行備份，以提供更好的使用者體驗。"
 }
