FIX: Some text describe

--- a/public/locales/en/index.json
+++ b/public/locales/en/index.json
@@ -1,5 +1,5 @@
 {
-  "Hello, I'm Kuan-Cheng Tsai": "Hello, I'm Kuan-Cheng Tsai",
+  "Hello, I'm Kuan-Cheng Cai": "Hello, I'm Kuan-Cheng Cai",
   "I am a frontend developer specializing in mobile applications with React Native, with over four years of experience, and I also have experience using NextJs for web application development": "I am a frontend developer specializing in mobile applications with React Native, with over four years of experience, and I also have experience using NextJs for web application development",
   "I have worked with companies such as": "I have worked with companies such as",
   "Work Projects": "Work Projects",
