--- a/public/locales/zh/index.json
+++ b/public/locales/zh/index.json
@@ -1,5 +1,5 @@
 {
-  "Hello, I'm Kuan-Cheng Tsai": "你好，我是蔡寬程",
+  "Hello, I'm Kuan-Cheng Cai": "你好，我是蔡寬程",
   "I am a frontend developer specializing in mobile applications with React Native, with over four years of experience, and I also have experience using NextJs for web application development": "我是一名專注於手機應用程式的前端開發人員，擁有 React Native 四年以上的開發經驗，並且也有使用 NextJs 進行 Web 應用程式開發的經驗。",
   "I have worked with companies such as": "我過去合作過的公司包括",
   "Work Projects": "工作專案",
