--- a/public/locales/en/index.json
+++ b/public/locales/en/index.json
@@ -1,25 +1,43 @@
 {
-  "Hello, I'm Kuan-Cheng Cai": "Hello, I'm Kuan-Cheng Cai",
-  "I am a frontend developer specializing in mobile applications with React Native, with over four years of experience, and I also have experience using NextJs for web application development": "I am a frontend developer specializing in mobile applications with React Native, with over four years of experience, and I also have experience using NextJs for web application development",
-  "I have worked with companies such as": "I have worked with companies such as",
-  "Work Projects": "Work Projects",
-  "Personal Projects": "Personal Projects",
-  "Optimization loading speed": "Optimization loading speed",
-  "Experience": "Experience",
-  "Skills": "Skills",
-  "This is a music player app that allows users to listen to music": "This is a music player app that allows users to listen to music",
-  "This is a music player application that allows users to listen to music and store music lists locally, ensuring that music can be played without an internet connection, It also provides a filtering function, allowing users to filter music by artist, music category, music name, etc \n\nDevelopment was motivated by the fact that most music players on the market do not have a filtering function, and unstable networks can cause music to be interrupted \n\nThe project uses Expo for development, SQLite as a local database, NodeJs as the backend, and ExpressJs to backup the database and music files \n\nIn the future, it is expected to use Google Drive or other cloud storage services for backup to provide a better user experience": "This is a music player application that allows users to listen to music and store music lists locally, ensuring that music can be played without an internet connection, It also provides a filtering function, allowing users to filter music by artist, music category, music name, etc \n\nDevelopment was motivated by the fact that most music players on the market do not have a filtering function, and unstable networks can cause music to be interrupted \n\nThe project uses Expo for development, SQLite as a local database, NodeJs as the backend, and ExpressJs to backup the database and music files \n\nIn the future, it is expected to use Google Drive or other cloud storage services for backup to provide a better user experience",
-  "This is a 2D face swap app that allows users to swap their face with another face": "This is a 2D face swap app that allows users to swap their face with another face",
-  "This is a simple 2D face swap application, allowing users to replace their face with another person's face, Initially, the manager wanted to use existing streaming platforms to let users switch faces in real-time, but due to the performance of current mobile phones or personal computers, it was too difficult to achieve, Therefore, traditional mathematical formulas were used to implement the face swap logic, This project was developed using React Native and implemented the face swap logic using native modules Kotlin, Objective-C, C++, and OpenCV": "This is a simple 2D face swap application, allowing users to replace their face with another person's face, Initially, the manager wanted to use existing streaming platforms to let users switch faces in real-time, but due to the performance of current mobile phones or personal computers, it was too difficult to achieve, Therefore, traditional mathematical formulas were used to implement the face swap logic, This project was developed using React Native and implemented the face swap logic using native modules Kotlin, Objective-C, C++, and OpenCV",
-  "This is a chat application with artificial intelligence": "This is a chat application with artificial intelligence",
-  "This is a simple chat application with artificial intelligence that was created for learning about AI, that allows users to create multiple chat rooms, and keeps memories of conversation, users can also delete conversation history \n\nThis project was developed using Expo and GitHub models": "This is a simple chat application with artificial intelligence that was created for learning about AI, that allows users to create multiple chat rooms, and keeps memories of conversation, users can also delete conversation history \n\nThis project was developed using Expo and GitHub models",
-  "The page load time has been reduced from more than ten seconds to less than one second": "The page load time has been reduced from more than ten seconds to less than one second",
-  "This was an optimization problem in a work project; the application was extremely slow during login \n\nThere were two main causes:\n\nfirst, the state was reset twice during login, resulting in two API calls and all components being re-rendered;\n\nsecond, the Redux version was outdated, causing the `selectFromResult` property of `useQuery` to always be re-rendered \n\nThese two issues were identified using two tools: React Devtools to check the number of re-renders and the Flipper plugin to check state changes \n\nOnce the causes were found, the problem was essentially solved, and the fix not only resolved the issue but also improved the application's speed": "This was an optimization problem in a work project; the application was extremely slow during login \n\nThere were two main causes:\n\nfirst, the state was reset twice during login, resulting in two API calls and all components being re-rendered;\n\nsecond, the Redux version was outdated, causing the `selectFromResult` property of `useQuery` to always be re-rendered \n\nThese two issues were identified using two tools: React Devtools to check the number of re-renders and the Flipper plugin to check state changes \n\nOnce the causes were found, the problem was essentially solved, and the fix not only resolved the issue but also improved the application's speed",
-  "Work Experience": "Work Experience",
-  "This is a Web3 smart retail system where merchants can manage and analyze products through the backend, while consumers can scan product tags to unlock product information, special promotions, NFTs, and gifts, It also provides third-party wallet integration, allowing users to view cryptocurrencies and NFTs through the wallet": "This is a Web3 smart retail system where merchants can manage and analyze products through the backend, while consumers can scan product tags to unlock product information, special promotions, NFTs, and gifts, It also provides third-party wallet integration, allowing users to view cryptocurrencies and NFTs through the wallet",
-  "This is a Web3 smart retail system, Merchants can view, manage, and analyze products through the backend, while consumers can unlock product information, special promotions, NFTs, and gifts by scanning product tags, It also provides third-party wallet integration, allowing users to view cryptocurrencies and NFTs, The application is implemented using React Native, with app clips developed in Swift, It offers scanning functionality and displays simple product descriptions, NextJs is used as the backend server, and the CMS is also developed entirely using NextJs": "This is a Web3 smart retail system, Merchants can view, manage, and analyze products through the backend, while consumers can unlock product information, special promotions, NFTs, and gifts by scanning product tags, It also provides third-party wallet integration, allowing users to view cryptocurrencies and NFTs, The application is implemented using React Native, with app clips developed in Swift, It offers scanning functionality and displays simple product descriptions, NextJs is used as the backend server, and the CMS is also developed entirely using NextJs ",
-  "About": "About",
-  "Back": "Back",
-  "Source Code": "Source Code",
-  "Store": "Store"
+  "profile": {
+    "greeting": "Hello, I'm Kuan-Cheng Cai",
+    "bio": "I'm a frontend engineer specializing in mobile app development with over 4 years of React Native experience, and also skilled in Next.js for web applications.",
+    "companiesIntro": "Companies I've worked with or for include"
+  },
+  "section": {
+    "workProjects": "Work Projects",
+    "personalProjects": "Personal Projects",
+    "experience": "Experience",
+    "skills": "Skills",
+    "workExperience": "Work Experience",
+    "about": "About"
+  },
+  "projects": {
+    "musicPlayer": {
+      "shortDesc": "A music player app for easy music listening.",
+      "fullDesc": "This music player app supports local music list storage for offline playback, with multi-condition filtering by artist, genre, and name.\n\nBuilt to solve common issues like lack of filtering in existing apps and playback interruptions from unstable networks.\n\nTech stack: Expo framework, SQLite local database, Node.js + Express.js backend for backups. Future plans include Google Drive integration for enhanced user experience."
+    },
+    "visualStreaming": {
+      "shortDesc": "A 2D face swap app for easy face replacement.",
+      "fullDesc": "This simple 2D face swap app lets users replace their face with another's. Originally planned for real-time streaming, but due to mobile/PC performance limits, implemented using traditional math formulas.\n\nTech stack: React Native framework with Kotlin, Objective-C, C++ native modules and OpenCV for face swap logic."
+    },
+    "aiChatApp": {
+      "shortDesc": "An AI chat app.",
+      "fullDesc": "This AI chat app, built for learning AI, allows multiple chat rooms, conversation memory retention, and history deletion.\n\nTech stack: Expo framework integrated with GitHub Models for AI conversations."
+    },
+    "optimizationLoadingSpeed": {
+      "title": "Optimization loading speed",
+      "shortDesc": "Reduced page load time from 10+ seconds to under 1 second.",
+      "fullDesc": "Login performance optimization case from a work project. Key issues:\n\n• State reset twice during login, causing duplicate API calls and full re-renders;\n• Outdated Redux version making `useQuery`'s `selectFromResult` re-render constantly.\n\nUsed React DevTools to track renders and Flipper to monitor state changes for precise diagnosis. Fix resolved bottleneck and significantly improved app speed."
+    },
+    "berify": {
+      "shortDesc": "Web3 smart retail system for merchant management and consumer tag scanning.",
+      "fullDesc": "Web3 smart retail system: Merchants manage/analyze products via backend; consumers scan tags to unlock product info, promotions, NFTs, gifts, with third-party wallet integration.\n\nTech stack: React Native for main app, Swift for App Clips (scanning & previews), Next.js backend server & full CMS."
+    },
+    "sourceCode": "Source Code",
+    "storeLink": "Store"
+  },
+  "nav": {
+    "back": "Back"
+  }
 }
