--- a/public/locales/zh/index.json
+++ b/public/locales/zh/index.json
@@ -1,25 +1,43 @@
 {
-  "Hello, I'm Kuan-Cheng Cai": "你好，我是蔡寬程",
-  "I am a frontend developer specializing in mobile applications with React Native, with over four years of experience, and I also have experience using NextJs for web application development": "我是一名專注於手機應用程式的前端開發人員，擁有 React Native 四年以上的開發經驗，並且也有使用 NextJs 進行 Web 應用程式開發的經驗。",
-  "I have worked with companies such as": "我過去合作過的公司包括",
-  "Work Projects": "工作專案",
-  "Personal Projects": "個人專案",
-  "Optimization loading speed": "優化加載速度",
-  "Experience": "經歷",
-  "Skills": "技能",
-  "This is a music player app that allows users to listen to music": "這是一個音樂播放器應用程式，允許使用者收聽音樂。",
-  "This is a music player application that allows users to listen to music and store music lists locally, ensuring that music can be played without an internet connection, It also provides a filtering function, allowing users to filter music by artist, music category, music name, etc \n\nDevelopment was motivated by the fact that most music players on the market do not have a filtering function, and unstable networks can cause music to be interrupted \n\nThe project uses Expo for development, SQLite as a local database, NodeJs as the backend, and ExpressJs to backup the database and music files \n\nIn the future, it is expected to use Google Drive or other cloud storage services for backup to provide a better user experience": "這是一個音樂播放器應用程式，允許使用者收聽音樂，並在本地儲存音樂列表，確保沒有網路連線時也能播放音樂。並提供過濾功能，可以按照歌手、音樂類別、音樂名稱等進行過濾。\n\n開發主因是想要解決市面上多數音樂播放器沒有過濾功能，以及網路不穩定導致音樂中斷等問題。\n\n該專案採用 Expo 進行開發，並透過 SQLite 作為本地資料庫，後端使用 NodeJs，使用 ExpressJs 進行開發，負責備份資料庫和音樂檔案。\n\n預計未來會用 Google Drive 或其他雲端儲存服務進行備份，以提供更好的使用者體驗。",
-  "This is a 2D face swap app that allows users to swap their face with another face": "這是一個 2D 視頻臉部替換應用程式，允許使用者替換自己的臉部。",
-  "This is a simple 2D face swap application, allowing users to replace their face with another person's face, Initially, the manager wanted to use existing streaming platforms to let users switch faces in real-time, but due to the performance of current mobile phones or personal computers, it was too difficult to achieve, Therefore, traditional mathematical formulas were used to implement the face swap logic, This project was developed using React Native and implemented the face swap logic using native modules Kotlin, Objective-C, C++, and OpenCV": "這是一個簡單的 2D 視頻臉部替換應用程式，允許使用者替換自己的臉部。最初是主管想要透過現有的串流平台，讓使用者可以即時的切換臉部，但以當前手機或個人電腦的性能，實在是難以實現，因此採用傳統的數學公式來實現該功能。\n\n該專案透過 React Native 開發，並透過原生模組 Kotlin、Objective-C、C ++ 和 OpenCV 來實現人臉交換的邏輯。這是一個簡易的2D臉部替換應用程式，使用者可以替換自己的臉部為另一個人的臉部。最初是主管想要透過現有的串流平台，讓使用者可以即時的切換臉部，但以當前手機或個人電腦的性能，實在是難以實現，因此採用傳統的數學公式來實現該功能。\n\n該專案透過React Native開發，並透過原生模組 Kotlin、Objective-C、C ++ 和 OpenCV 來實現人臉交換的邏輯。",
-  "This is a chat application with artificial intelligence": "這是一個 AI 聊天應用程式。",
-  "This is a simple chat application with artificial intelligence that was created for learning about AI, that allows users to create multiple chat rooms, and keeps memories of conversation, users can also delete conversation history \n\nThis project was developed using Expo and GitHub models": "這是一個簡單的 AI 聊天應用程式，它被創建用於學習 AI，允許使用者創建多個聊天室，並保存對話記憶。使用者也可以刪除對話歷史。該專案使用 Expo 和 GitHub 模型開發。",
-  "The page load time has been reduced from more than ten seconds to less than one second": "將頁面載入時間從十幾秒縮短一秒以內。",
-  "This was an optimization problem in a work project; the application was extremely slow during login \n\nThere were two main causes:\n\nfirst, the state was reset twice during login, resulting in two API calls and all components being re-rendered;\n\nsecond, the Redux version was outdated, causing the `selectFromResult` property of `useQuery` to always be re-rendered \n\nThese two issues were identified using two tools: React Devtools to check the number of re-renders and the Flipper plugin to check state changes \n\nOnce the causes were found, the problem was essentially solved, and the fix not only resolved the issue but also improved the application's speed": "這是工作項目中的最佳化問題，該應用程式在登入過程中速度非常慢。\n\n導致此問題的原因有兩個：\n\n首先，登入過程中狀態被重置了兩次，這導致 API 呼叫兩次，所有元件都被重新渲染；\n\n其次，Redux 版本過舊，導致設定 `selectFromResult` 的 useQuery 總是被重新渲染。\n\n關於找到這兩個問題則是透過兩項工具，其中一項是 React Devtools 用來檢查重新渲染的次數，另一項則是 Flipper 外掛程式來檢查狀態變化 \n\n找到原因後，問題也就相當於解決了，修正後，不僅解決問題本身，也提升了應用程式速度。",
-  "Work Experience": "工作經驗",
-  "This is a Web3 smart retail system where merchants can manage and analyze products through the backend, while consumers can scan product tags to unlock product information, special promotions, NFTs, and gifts, It also provides third-party wallet integration, allowing users to view cryptocurrencies and NFTs through the wallet": "這是一個 Web3 智慧零售系統，商家可以透過後臺查看管理和分析商品，而消費者則透過掃描相關產品的標籤，來解鎖商品資訊、特別促銷、NFT和贈品等，也提供第三方串接錢包，透過錢包查看加密貨幣和 NFT。",
-  "This is a Web3 smart retail system, Merchants can view, manage, and analyze products through the backend, while consumers can unlock product information, special promotions, NFTs, and gifts by scanning product tags, It also provides third-party wallet integration, allowing users to view cryptocurrencies and NFTs, The application is implemented using React Native, with app clips developed in Swift, It offers scanning functionality and displays simple product descriptions, NextJs is used as the backend server, and the CMS is also developed entirely using NextJs": "這是一個 Web3 智慧零售系統，商家可以透過後臺查看管理和分析商品，而消費者則透過掃描相關產品的標籤，來解鎖商品資訊、特別促銷、NFT和贈品等，也提供第三方串接錢包，透過錢包查看加密貨幣和 NFT。應用程式用 react-native 實現，並用 swift 開發 app clip，提供掃描功能，可以看到簡易的產品介紹，並使用NextJs 作爲後台伺服器，內容管理系統 (CMS) 也完全基於 NextJs 開發。",
-  "About": "關於",
-  "Back": "返回",
-  "Source Code": "原始碼",
-  "Store": "商店"
+  "profile": {
+    "greeting": "你好，我是蔡寬程",
+    "bio": "我是一位專注手機應用開發的前端工程師，擁有超過四年 React Native 經驗，同時擅長使用 Next.js 開發 Web。",
+    "companiesIntro": "我曾任職或合作過的公司包括"
+  },
+  "section": {
+    "workProjects": "工作專案",
+    "personalProjects": "個人專案",
+    "experience": "經歷",
+    "skills": "技能",
+    "workExperience": "工作經驗",
+    "about": "關於"
+  },
+  "projects": {
+    "musicPlayer": {
+      "shortDesc": "這是一個音樂播放器 App，讓使用者輕鬆收聽音樂。",
+      "fullDesc": "這款音樂播放器 App 支援本地儲存音樂列表，確保離線也能播放，並提供歌手、音樂類別、名稱等多條件篩選功能。\n\n開發初衷是解決市面音樂播放器缺乏篩選機制，以及網路不穩導致播放中斷的痛點。\n\n技術棧：Expo 開發框架、SQLite 本地資料庫、Node.js + Express.js 後端備份。未來計畫整合 Google Drive 等雲端服務，提升使用者體驗。"
+    },
+    "visualStreaming": {
+      "shortDesc": "這是一個 2D 臉部替換 App，讓使用者輕鬆替換臉部。",
+      "fullDesc": "這款簡單 2D 臉部替換 App，讓使用者能將自己的臉替換成他人臉部。原計畫透過串流平台實現即時替換，但受限手機/電腦效能，轉而採用傳統數學公式實現核心邏輯。\n\n技術棧：React Native 開發框架，結合 Kotlin、Objective-C、C++ 原生模組及 OpenCV 處理臉部交換。"
+    },
+    "aiChatApp": {
+      "shortDesc": "這是一個 AI 聊天 App。",
+      "fullDesc": "這款 AI 聊天 App 專為學習 AI 而建，使用者可建立多聊天室、保留對話記憶，並隨時刪除歷史紀錄。\n\n技術棧：Expo 開發框架，整合 GitHub Models 實現 AI 對話功能。"
+    },
+    "optimizationLoadingSpeed": {
+      "title": "優化加載速度",
+      "shortDesc": "將頁面載入時間從 10 多秒縮短至 1 秒以內。",
+      "fullDesc": "這是工作專案中的登入效能優化案例。主要問題：\n\n• 登入時狀態重置兩次，導致 API 重複呼叫與全畫面重新渲染；\n• Redux 版本過舊，造成 `useQuery` 的 `selectFromResult` 持續重新渲染。\n\n透過 React DevTools 追蹤渲染次數、Flipper 監控狀態變化，精準定位問題。修正後不僅解決瓶頸，還大幅提升整體應用速度。"
+    },
+    "berify": {
+      "shortDesc": "這是一個 Web3 智慧零售系統，商家後台管理商品，消費者掃描標籤解鎖資訊、促銷。",
+      "fullDesc": "Web3 智慧零售系統：商家透過後台管理與分析商品，消費者掃描標籤解鎖商品資訊、促銷、NFT 及贈品，並整合第三方錢包查看資產。\n\n技術棧：React Native 開發主 App、Swift 製作 App Clips（掃描與簡介展示）、Next.js 後端伺服器與完整 CMS。"
+    },
+    "sourceCode": "原始碼",
+    "storeLink": "商店"
+  },
+  "nav": {
+    "back": "返回"
+  }
 }
