refactor: Standardize project detail pages by introducing reusable components and updating content.

--- a/public/locales/en/projects/10xAppSpeed.json
+++ b/public/locales/en/projects/10xAppSpeed.json
@@ -36,7 +36,8 @@
           "area": "Multi-page Navigation",
           "exp": "Significantly reduced performance-related complaints during the QA phase."
         }
-      }
+      },
+      "platforms": ["Android", "iOS"]
     },
     "diagnosis": {
       "steps": {
